--- a/MauiApp1/Pages/Index.razor
+++ b/MauiApp1/Pages/Index.razor
@@ -9,6 +9,6 @@ Welcome to your new app.
 <input type="text" list="MyHtmlId-Auto-Complete-List" />
 
 <datalist id="MyHtmlId-Auto-Complete-List">
-    <option value="123">123</option>
-    <option value="321">321</option>
+    <option value="0123"></option>
+    <option value="4321"></option>
 </datalist>
